--- a/pdvalidate.html
+++ b/pdvalidate.html
@@ -135,7 +135,7 @@
                                             <div class="font-bold text-slate-900">Multi-Space Team</div>
                                             <div class="text-[10px] text-slate-500 font-normal">One Org, Many Spaces</div>
                                         </td>
-                                        <td class="px-3 py-2 align-middle font-mono text-indigo-600">&lt;Org&gt;-&lt;Func&gt;~Support</td>
+                                        <td class="px-3 py-2 align-middle font-mono text-indigo-600">&lt;Org&gt;-&lt;BusinessFunction&gt;~Support</td>
                                         <td class="px-3 py-2 align-middle font-mono text-slate-500">insurance_uw_us-L2_app~Support</td>
                                     </tr>
                                     <tr class="hover:bg-slate-50">
@@ -143,7 +143,7 @@
                                             <div class="font-bold text-slate-900">Cross-Org Team</div>
                                             <div class="text-[10px] text-slate-500 font-normal">Many Orgs / No Org</div>
                                         </td>
-                                        <td class="px-3 py-2 align-middle font-mono text-indigo-600">&lt;Func&gt;-Support</td>
+                                        <td class="px-3 py-2 align-middle font-mono text-indigo-600">&lt;BusinessFunction&gt;-Support</td>
                                         <td class="px-3 py-2 align-middle font-mono text-slate-500">Corp_Jira-Support</td>
                                     </tr>
                                 </tbody>
@@ -334,3 +334,4 @@
     </script>
 </body>
 </html>
+
